@@ -3,6 +3,7 @@
 [entity-description]
 
 [mod-setting-name]
+rampant-evolution--evolutionPerWormKilled=Evolution per worm killed
 rampant-evolution-evolutionPerUnitKilled=Evolution per biter unit killed
 rampant-evolution-evolutionPerHiveKilled=Evolution per Rampant hive killed
 rampant-evolution-evolutionPerSpawnerKilled=Evolution per Spawner killed
@@ -20,6 +21,7 @@ rampant-evolution--minimumDevolutionPercentage=Peak evolution minimum percentage
 rampant-evolution--evolutionResolutionLevel=Reconstruction accuracy
 
 [mod-setting-description]
+rampant-evolution--evolutionPerWormKilled=This setting changes how evolution should be affected by worms being killed. This number should be treated the same as the vanilla pollution, spawner, and time sliders in terms of how to interpret it
 rampant-evolution-evolutionPerUnitKilled=This setting changes how evolution should be affected by biter units being killed. This number should be treated the same as the vanilla pollution, spawner, and time sliders in terms of how to interpret it
 rampant-evolution-evolutionPerHiveKilled=This setting changes how evolution should be affected by Rampant hives being killed. This number should be treated the same as the vanilla pollution, spawner, and time sliders in terms of how to interpret it
 rampant-evolution-evolutionPerSpawnerKilled=This setting changes how evolution should be affected by spawners being killed. This number should be treated the same as the vanilla pollution, spawner, and time sliders in terms of how to interpret it
@@ -38,4 +40,4 @@ rampant-evolution--evolutionResolutionLevel=The number of delta counts to comput
 
 [description]
 rampant-evolution--refreshingEvolution=RampantEvolution: Recalculating evolution, this could take several minutes to recalculate. Script times will be higher while reprocessing.
-rampant-evolution--displayEvolutionMsg=RampantEvolution:\n__1__%: Current Evolution\n   __2__%: Tile Absorbed Pollution Contribution\n   __3__%: Tree Absorbed Pollution Contribution\n   __4__%: Tree Damaged By Pollution Contribution\n   __5__%: Spawner Absorbed Pollution Contribution\n   __6__%: Killed Spawners Contribution\n   __7__%: Killed Hives Contribution\n   __8__%: Killed Units Contribution\n   __9__%: Pollution Generated Contribution\n   __10__%: Time Generated Contribution\n   __11__%: Minimum Evolution
+rampant-evolution--displayEvolutionMsg=RampantEvolution:\n__1__%: Current Evolution\n   __2__%: Tile Absorbed Pollution Contribution\n   __3__%: Tree Absorbed Pollution Contribution\n   __4__%: Tree Damaged By Pollution Contribution\n   __5__%: Spawner Absorbed Pollution Contribution\n   __6__%: Killed Spawners Contribution\n   __7__%: Killed Hives Contribution\n   __8__%: Killed Units Contribution\n   __9__%: Killed Worms Contribution\n   __10__%: Pollution Generated Contribution\n   __11__%: Time Generated Contribution\n  __12__%: Minimum Evolution
