@@ -3,6 +3,7 @@ Version: 1.3.0
 Date: 27. 12. 2021
   Improvements:
     - Added mod setting to control evolution calculation accuracy
+    - Added mod setting to control evolution per worm killed
   Tweaks:
     - Added some additional information around the console command /rampantEvolution
     - Increased frequency to every 2 minutes for stats grabbed from factorio engine for computing deltas
